--- a/modelo_bmw.ipynb
+++ b/modelo_bmw.ipynb
@@ -145,6 +145,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "21e04b81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ydata_profiling import ProfileReport "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ee993fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "24fa252f",
    "metadata": {},
    "outputs": [],
